--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
  <head>
   <meta charset="utf-8">
-  <title>Пример страницы</title>
+  <title>Список шаблонов</title>
  </head>
  <body>
   <p>
-    <a href="list.html">Список шаблонов</a>
+    <a href="template_1.html">Шаблон_1</a>
   </p>
  </body>
 </html>
