--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  </head>
  <body>
   <p>
-    <a href="/111/template_1.html">Шаблон_1</a>
+    <a href="111/template_1.html">Шаблон_1</a>
   </p>
  </body>
 </html>
