--- a/111/template_1.html
+++ b/111/template_1.html
@@ -71,7 +71,7 @@
 
     
     <!-- Custom styles for this template -->
-    <link href="product.css" rel="stylesheet">
+    <link href="../product.css" rel="stylesheet">
   </head>
   <body>
     
