--- a/bootstrap-5.2.0-examples/cheatsheet/index.html
+++ b/bootstrap-5.2.0-examples/cheatsheet/index.html
@@ -14,7 +14,7 @@
 
     
 
-<link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="../../bootstrap-5.2.0/css/bootstrap.min.css" rel="stylesheet">
 
     <style>
       .bd-placeholder-img {
@@ -1837,7 +1837,7 @@
 </div>
 
 
-    <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../../bootstrap-5.2.0/js/bootstrap.bundle.min.js"></script>
 
       <script src="cheatsheet.js"></script>
   </body>
